# tactica-backend

./: .gitignore  README.md  alembic.ini.example  pyproject.toml
alembic/: env.py
alembic/versions/: 537f04d95f39_add_users_conversations_messages_.py  6917d1cec665_initial_documents_table.py  8ffcf6ca7842_add_conversation_memory_table.py  ae30986eadf1_add_ondelete_cascade_to_foreign_keys.py
app/: main.py
app/agents/: agents.py  group_chat.py  model_client.py  pipeline.py  tools.py
app/api/: router.py
app/api/routes/: __init__.py  auth.py  conversations.py  messages.py
app/core/: config.py
app/db/: database.py
app/models/: __init__.py  conversation.py  conversation_memory.py  document.py  message.py  message_citation.py  user.py
app/schemas/: auth.py  conversation.py  message.py
app/services/: __init__.py  authentication_service.py  chunker_service.py  conversation_service.py  embedding_service.py  ingestion_service.py  message_service.py  rag_service.py  scraper_service.py
app/utils/: security.py
